# gtaa-ai-validator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  gTAA_AI_Validator_TFM_Jose_Antonio_Membrive_Guillen.pptx  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test-action.yml  uat.yml
docs/: ARCHITECTURE_DECISIONS.md  DOC_AUDIT_REPORT.md  PHASE10_FLOW_DIAGRAMS.md  PHASE10_SECURITY_AUDIT.md  PHASE1_FLOW_DIAGRAMS.md  PHASE2_FLOW_DIAGRAMS.md  PHASE3_FLOW_DIAGRAMS.md  PHASE4_FLOW_DIAGRAMS.md  PHASE5_FLOW_DIAGRAMS.md  PHASE6_FLOW_DIAGRAMS.md  PHASE7_FLOW_DIAGRAMS.md  PHASE8_FLOW_DIAGRAMS.md  PHASE9_FLOW_DIAGRAMS.md  README.md  SECURITY_AUDIT_REPORT.md  TEST_AUDIT_REPORT.md  UAT_TESTING_REPORT.md
examples/: README.md
examples/Automation-Guide-Rest-Assured-Java-master/: README.md  pom.xml
examples/bad_project/: test_data_issues.py  test_login.py  test_search.py
examples/python_live_project/: .env.example  ISSUES_CATALOG.md  README.md  conftest.py  pyproject.toml
examples/python_live_project/api/: __init__.py  client.py  schemas.py
examples/python_live_project/config/: settings.py
examples/python_live_project/pages/: __init__.py  base_page.py  cart_page.py  checkout_page.py  dashboard_page.py  login_page.py  product_detail_page.py  products_page.py
examples/python_live_project/tests/: test_api.py  test_cart.py  test_checkout_e2e.py  test_dashboard.py  test_login.py  test_products.py
examples/python_live_project/utils/: __init__.py  helpers.py  reporter.py
gtaa_validator/: __init__.py  __main__.py  config.py  file_classifier.py  file_utils.py  logging_config.py  models.py
gtaa_validator/analyzers/: __init__.py  semantic_analyzer.py  static_analyzer.py
gtaa_validator/checkers/: __init__.py  adaptation_checker.py  base.py  bdd_checker.py  definition_checker.py  quality_checker.py  structure_checker.py
gtaa_validator/examples/: __init__.py
gtaa_validator/llm/: __init__.py  api_client.py  client.py  factory.py  gemini_client.py  prompts.py  protocol.py
gtaa_validator/parsers/: __init__.py  csharp_parser.py  gherkin_parser.py  java_parser.py  js_parser.py  python_parser.py  treesitter_base.py
gtaa_validator/reporters/: __init__.py  html_reporter.py  json_reporter.py
tests/: conftest.py  test_static_analyzer.py
tests/integration/: test_reporters.py  test_semantic_integration.py  test_static_analyzer.py
tests/unit/: test_adaptation_checker.py  test_api_client.py  test_base_checker.py  test_bdd_checker.py  test_classifier.py  test_cli.py  test_config.py  test_csharp_checker.py  test_definition_checker.py  test_file_utils.py  test_gemini_client.py  test_gherkin_parser.py  test_html_reporter.py  test_java_checker.py  test_js_checker.py  test_json_reporter.py  test_llm_client.py  test_llm_factory.py  test_llm_protocol.py  test_logging_config.py  test_models.py  test_prompts.py  test_python_parser.py  test_quality_checker.py  (+3 more)
(+86 files in other folders)
