[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtaa-ai-validator"
dynamic = ["version"]
description = "Validador de cumplimiento arquitectónico gTAA para proyectos de test automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jose Antonio Membrive Guillen", email = "membri_2@hotmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ai = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]
parsers = [
    "tree-sitter-language-pack>=0.4.0",
    "tree-sitter-c-sharp>=0.23.0",
]
all = [
    "gtaa-ai-validator[ai,parsers]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gtaa-validator = "gtaa_validator.__main__:main"

[project.urls]
Homepage = "https://github.com/Membrive92/gtaa-ai-validator"

[tool.setuptools.dynamic]
version = {attr = "gtaa_validator.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"gtaa_validator.examples" = ["**/*.py", "**/*.java", "**/*.js", "**/*.ts", "**/*.cs", "**/*.feature", "**/*.yaml", "**/*.yml", "**/*.json", "**/*.html", "**/*.cfg", "**/*.txt", "**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["gtaa_validator"]
omit = ["tests/*", "gtaa_validator/examples/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
